fix stretched images

--- a/frontend/src/components/stories/story_index/stories.css
+++ b/frontend/src/components/stories/story_index/stories.css
@@ -1,6 +1,7 @@
 .story-img {
   height: 100%;
   width: 152px;
+  object-fit: cover;
 }
 
 .story-title {
