--- a/frontend/src/components/users/user_show.css
+++ b/frontend/src/components/users/user_show.css
@@ -100,13 +100,14 @@
 
 .avatar-container img {
   width: 100px;
-    height: 100px;
-    border-radius: 99px;
-    float: right;
-    position: relative;
-    bottom: 40px;
-    left: 5px;
-    margin-right: -100px;
+  height: 100px;
+  border-radius: 99px;
+  float: right;
+  position: relative;
+  bottom: 40px;
+  left: 5px;
+  margin-right: -100px;
+  object-fit: cover;
 }
 
 .reveal-input {
@@ -138,7 +139,7 @@
   width: 500px;
   height: 100%;
   margin: 0 auto;
-  padding: 20px; 
+  padding: 20px;
   box-shadow: 0 20px 28px rgba(0, 0, 0, 0.35), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
@@ -149,9 +150,10 @@
 .user-story-show-img {
   width: 100%;
   height: 150px;
+  object-fit: cover;
 }
 
-.user-story-show-date{
+.user-story-show-date {
   padding-bottom: 50px;
 }
 
